feat: literally everything ui
