# backend/build/swagger.json
@@ -110,6 +110,62 @@
 			"IUserOptional": {
 				"$ref": "#/components/schemas/Partial_IUserInput_"
 			},
+			"IUser": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"first_name": {
+						"type": "string"
+					},
+					"last_name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string"
+					},
+					"dob": {
+						"type": "string"
+					},
+					"gender": {
+						"$ref": "#/components/schemas/Gender"
+					},
+					"address": {
+						"type": "string"
+					},
+					"role": {
+						"$ref": "#/components/schemas/Role"
+					},
+					"created_at": {
+						"type": "string"
+					},
+					"updated_at": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"first_name",
+					"last_name",
+					"email",
+					"password",
+					"phone",
+					"dob",
+					"gender",
+					"address",
+					"role",
+					"created_at",
+					"updated_at"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Genre": {
 				"enum": [
 					"rnb",
@@ -119,6 +175,30 @@
 					"jazz"
 				],
 				"type": "string"
+			},
+			"Pick_IMusicInput.Exclude_keyofIMusicInput.artist_id__": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"album_name": {
+						"type": "string"
+					},
+					"genre": {
+						"$ref": "#/components/schemas/Genre"
+					}
+				},
+				"required": [
+					"title",
+					"album_name",
+					"genre"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IMusicInput.artist_id_": {
+				"$ref": "#/components/schemas/Pick_IMusicInput.Exclude_keyofIMusicInput.artist_id__",
+				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"IArtist": {
 				"properties": {
@@ -162,17 +242,8 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_IMusic.Exclude_keyofIMusic.id-or-created_at-or-updated_at__": {
+			"Partial_Pick_IMusicInput.artist_id__": {
 				"properties": {
-					"title": {
-						"type": "string"
-					},
-					"album_name": {
-						"type": "string"
-					},
-					"genre": {
-						"$ref": "#/components/schemas/Genre"
-					},
 					"artist_id": {
 						"anyOf": [
 							{
@@ -184,21 +255,18 @@
 						]
 					}
 				},
-				"required": [
-					"title",
-					"album_name",
-					"genre",
-					"artist_id"
-				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
+				"description": "Make all properties in T optional"
 			},
-			"Omit_IMusic.id-or-created_at-or-updated_at_": {
-				"$ref": "#/components/schemas/Pick_IMusic.Exclude_keyofIMusic.id-or-created_at-or-updated_at__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"IMusicInput": {
-				"$ref": "#/components/schemas/Omit_IMusic.id-or-created_at-or-updated_at_"
+			"IMuiscExcludeArtist": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Omit_IMusicInput.artist_id_"
+					},
+					{
+						"$ref": "#/components/schemas/Partial_Pick_IMusicInput.artist_id__"
+					}
+				]
 			},
 			"Partial_IMusicInput_": {
 				"properties": {
@@ -227,6 +295,49 @@
 			},
 			"IMusicOptional": {
 				"$ref": "#/components/schemas/Partial_IMusicInput_"
+			},
+			"IMusic": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"album_name": {
+						"type": "string"
+					},
+					"genre": {
+						"$ref": "#/components/schemas/Genre"
+					},
+					"artist_id": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"$ref": "#/components/schemas/IArtist"
+							}
+						]
+					},
+					"created_at": {
+						"type": "string"
+					},
+					"updated_at": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"title",
+					"album_name",
+					"genre",
+					"artist_id",
+					"created_at",
+					"updated_at"
+				],
+				"type": "object",
+				"additionalProperties": false
 			},
 			"Pick_IArtist.Exclude_keyofIArtist.id-or-created_at-or-updated_at__": {
 				"properties": {
@@ -289,7 +400,17 @@
 				"description": "Make all properties in T optional"
 			},
 			"IArtistOptional": {
-				"$ref": "#/components/schemas/Partial_IArtistInput_"
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Partial_IArtistInput_"
+					},
+					{
+						"properties": {
+							"user": {}
+						},
+						"type": "object"
+					}
+				]
 			}
 		},
 		"securitySchemes": {
@@ -297,7 +418,7 @@
 				"type": "apiKey",
 				"name": "Authorization",
 				"in": "header",
-				"description": "Enter token in Bearer[space]token format for User"
+				"description": "Enter token for User"
 			}
 		}
 	},
@@ -509,6 +630,47 @@
 				]
 			}
 		},
+		"/user/userDetails": {
+			"get": {
+				"operationId": "GetUserDetails",
+				"responses": {
+					"200": {
+						"description": "Fetched",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"$ref": "#/components/schemas/IUser"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"user"
+				],
+				"security": [
+					{
+						"jwt": [
+							"super_admin",
+							"artist",
+							"artist_manager"
+						]
+					}
+				],
+				"parameters": []
+			}
+		},
 		"/music/create": {
 			"post": {
 				"operationId": "CreateMusic",
@@ -538,7 +700,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IMusicInput"
+								"$ref": "#/components/schemas/IMuiscExcludeArtist"
 							}
 						}
 					}
@@ -633,7 +795,23 @@
 						"description": "Fetched",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {
+											"items": {
+												"$ref": "#/components/schemas/IMusic"
+											},
+											"type": "array"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -878,7 +1056,7 @@
 	},
 	"servers": [
 		{
-			"url": "/"
+			"url": "http://localhost:8000/"
 		}
 	]
 }
